--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Watermarker</title>
+  <title>Image Watermarker - @Bearden.Art</title>
   <link rel="stylesheet" href="static/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
@@ -67,5 +67,8 @@
   
 
   <script src="static/js/app.js"></script>
+  
+  <p>Warning: This is just a quick prototype for myself to tinker with. There is likely bugs!</p>
+<p><a href="https://www.instagram.com/Bearden.Art" target="_blank">Bearden.Art</a></p>
 </body>
 </html>
