--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Bearden.Art Image Watermarker</h1>
     <div class="input-wrapper">
       <label class="input-label">Images</label>
-      <input type="file" id="image-input" multiple accept="image/jpeg, image/png, image/jpg" webkitdirectory>
+      <input type="file" id="image-input" multiple accept="image/jpeg, image/png, image/jpg">
     </div>
     <div class="input-wrapper">
       <label class="input-label">Watermark</label>
