--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
     <h1>Bearden.Art Image Watermarker</h1>
+	<p>A simple tool for watermarking your images and downloading each or a zip file of all. </p>
     <div class="input-wrapper">
       <label class="input-label">Images</label>
       <input type="file" id="image-input" multiple accept="image/jpeg, image/png, image/jpg">
