--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Watermarker - @Bearden.Art</title>
+  <title>Watermarks - @Bearden.Art</title>
   <link rel="stylesheet" href="static/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bearden.Art Image Watermarker</h1>
+    <h1>Bearden.Art - Watermarks</h1>
 	<p>A simple tool for watermarking your images and downloading each or a zip file of all. </p>
     <div class="input-wrapper">
       <label class="input-label">Images</label>
