--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NWZ9JK5XZG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NWZ9JK5XZG');
+</script>
 <body>
   <div class="container">
     <h1>Bearden.Art - Watermarks</h1>
@@ -37,19 +46,21 @@
       <input type="range" id="scale-range" min="0.05" max="0.20" step="0.01" value="0.10">
       <span id="scale-display">100%</span>
     </div>
-	 <div class="input-wrapper">
-		<label for="padding-input">Padding</label>
-		<input type="number" id="padding-input" min="0" value="100" step="1">
-    </div>
-	
     <div class="input-wrapper">
       <label class="input-label">Opacity</label>
       <input type="range" id="opacity-range" min="0.01" max="1" step="0.01" value="1">
       <span id="opacity-display">100%</span>
     </div>
-    <button id="confirm-button">Apply Watermarks to all images</button>
-  </div>
-   <div id="downloads">
+
+	 <div class="input-wrapper">
+		<label for="padding-input">Padding</label>
+		<input type="number" id="padding-input" min="0" value="100" step="1">
+    </div>
+	
+
+    <button id="confirm-button">Apply Watermarks to all images</button><br><br>
+	
+	 <div id="downloads">
    <h3>Downloads</h3>
    <button id="download-all-button">Download All as ZIP</button>
    <div id="download-buttons-container">
@@ -57,12 +68,12 @@
 				
 		</div>
 		
-	</div>
+	</div><br>
 
-  <!-- Add this inside the container div -->
+
 <div id="preview-container">
-  <h2>Preview of first image</h2>
   <canvas id="preview-canvas"></canvas>
+<i>Generated previews are not full resolution - Use Apply Watermarks to all images to get your original resolution.</i>
 </div>
   <div id="loader" style="display: none;">
     <div id="bear-animation">
@@ -75,13 +86,11 @@
   </div>
 
   
-
-  <script src="static/js/app.js"></script>
-  
   <p>Warning: This is just a quick prototype for myself to tinker with. There is likely bugs!</p>
-  <p>Notes/Tips:
- <ul><ol></ol></ul>
 <p><a href="https://www.instagram.com/Bearden.Art" target="_blank">Bearden.Art</a></p>
-<p>Last updated: <span id="last-updated"></span></p>
+	
+  </div>
+  
+  <script src="static/js/app.js"></script>
 </body>
 </html>
