added footer and legals

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 <p><a href="https://www.instagram.com/Bearden.Art" target="_blank">Bearden.Art</a></p>
 	
   </div>
-  
+      <footer>
+        <a href="/">Homepage</a> | <a href="https://github.com/earthstorm86/watermark/issues" target="_blank">Submit an issue / feedback</a> | <a href="legal.html#privacy">Privacy Policy</a> | <a href="legal.html#terms">Terms of Service</a> | <a href="https://www.instagram.com/Bearden.Art" target="_blank">Bearden.Art</a>
+    </footer>
   <script src="static/js/app.js"></script>
 </body>
 </html>
