--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="input-wrapper">
       <label id="watermark-input-label">Watermark</label>
       <input type="file" id="watermark-input" accept="image/jpeg, image/png, image/jpg">
+      <!-- Added a select element here for user to choose a watermark -->
+      <select id="watermark-select" style="display: none;"></select>
     </div>
     <div class="input-wrapper">
       <label class="input-label">Position</label>
