--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="input-wrapper">
       <label id="watermark-input-label">Watermark</label>
-      <input type="file" id="watermark-input" accept="image/jpeg, image/png, image/jpg">
+      <input type="file" id="watermark-input" accept="image/jpeg, image/png, image/jpg, , image/webp">
       <!-- Added a select element here for user to choose a watermark -->
       <select id="watermark-select" style="display: none;"></select>
     </div>
